# ResearchAgent

./: .dockerignore  .gitignore  Dockerfile  README.md  env.example  pyproject.toml
.cursor/: mcp.json
.do/: app.yaml
config/: exclusions.yaml  schedule.example.yaml  schedule.yaml  subject_matter.yaml
deploy/: nginx.conf  start.sh
docs/: Analysis.md  analysis.md  implementation-plan.md  plan.md  specs.md  subject-matter.md
migrations/: 001_remove_poster_url.py  002_move_location_to_venues.py  003_add_event_tags.py
output/: agent_research.html  agent_research.xlsx  run_log.md
scripts/: diag_crawl.py  diag_strategy.py  generate_about_diagrams.py  repair_image_blobs.py  start_serve.ps1
templates/: event_table.html
tests/: conftest.py  test_api.py  test_api_events_venue.py  test_comment_store.py  test_dedupe_remediation.py  test_display_time.py  test_enrich.py  test_event_search.py  test_event_store_venue.py  test_event_tagging.py  test_event_window.py  test_events_api_cache.py  test_exclusion_prune.py  test_graph_diagnostics.py  test_graph_nodes.py  test_html_output.py  test_image_cache.py  test_json_output.py  test_llm_factory.py  test_local_output.py  test_migrations.py  test_notion_output.py  test_pipeline_diagnostics.py  test_prompt_guides.py  test_query_planner.py  test_report_store.py  test_run_report.py  test_scheduler.py  test_semantic_dedupe.py  test_seo.py  test_site_crawl.py  test_snapshot.py  test_source_store.py  test_strategy_diagnostics.py  test_strategy_scores.py  test_structured_output.py  test_topics.py  test_user_store.py  (+4 more)
(+184 files in other folders)
