[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent"
version = "0.1.0"
description = "LangGraph agent that researches subjects and saves curated events to MongoDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "langgraph>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-community>=0.2.0",
  "langchain-core>=0.2.0",
  "apscheduler>=3.10.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.0",
  "openpyxl>=3.1.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
  "tzdata>=2024.1",
  "ddgs>=9.0.0",
  "pymongo>=4.6.0",
  "starlette>=0.37.0",
  "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "mongomock>=4.1.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
